Fix text alignment of parsing options (#78)
Fixes #70

--- a/module/styles/commons-importing-controller.less
+++ b/module/styles/commons-importing-controller.less
@@ -66,6 +66,18 @@ div.grid-layout > table.categoriesTable > tbody > tr > td.depth-input-td {
   padding-left: 5px;
 }
 
+table.parsing-options-table {
+  width: 100%;
+}
+
+.commons-options {
+  width: 25%;
+}
+
+.preview-button {
+  width: 1%;
+}
+
 .fbs-reset.fbs-pane.fbs-pane-type {
   width:561px;
 }
